flink load default configuration